seccion 10 - pipes angular

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+html, body{
+    margin: 10px;
+    /* --font-family : variables globales copiadas del archivo css de "vela-blue */
+    background-color: var(--surface-b);
+    font-family: var(--font-family);
+}
+
+.text-layout {
+    color: var(--text-color)
+}
+
+
+
