--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,79 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+    <h1>Piepes personalizados</h1>
+
+    <p>Pipes creados por {{'nosotros' | mayusculas:enMayusculas}}</p>
+
+
+</div>
+
+<p-toolbar>
+    <div class="p-toolbar-group-start"></div>
+
+    <div class="p-toolbar-group-end">
+
+        <button (click)="cambiarLetra()" pButton type="button" label="Toggle mayúsculas"
+            class="p-button-warning m-1"></button>
+        <button pButton icon="pi pi-sort" label="Por nombre" class="m-1" (click)="cambiarOrdern('nombre')"></button>
+        <button pButton icon="pi pi-sort" label="Vuela" class="m-1 p-button-success"
+            (click)="cambiarOrdern('vuela')"></button>
+        <button pButton icon="pi pi-sort" label="Por color" class="m-1 p-button-help"
+            (click)="cambiarOrdern('color')"></button>
+
+    </div>
+</p-toolbar>
+
+<div class="p-grid">
+    <div class="col my-2">
+        <!-- PrimeNg - Table - Basic -->
+        <p-table [value]="heroes | ordernar:ordernarPor" [tableStyle]="{'min-width': '50rem'}">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Nombre</th>
+                    <th>Vuela</th>
+                    <th>Color</th>
+                </tr>
+            </ng-template>
+            <!-- let-heroe : Forma de declarar variables de scope según ES6. 
+                let- : Paralabra para declrar variable  
+                heroe : Nombre de la variable que representa cada iteración de  [value]="heroes"
+            -->
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>{{ heroe.nombre }}</td>
+                    <!-- Encadeno pipes, en este caso, primero "vuelva" y una vez terminado el pipe "titlecase" -->
+                    <td>{{ heroe.vuela | vuela | titlecase}}</td>
+                    <td>{{ heroe.color }}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
+
+<div class="p-grid">
+    <div class="col my-2">
+        <!-- PrimeNg - Table - Sort -->
+        <!--  slice:0 : Pipe que genera una copia del anterior arreglo para que no se vea afectado el anterior por las modificaciones en este -->
+        <p-table [value]="heroes | slice:0" [tableStyle]="{'min-width': '50rem'}">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="nombre" style="width:20%">Nombre <p-sortIcon field="nombre"></p-sortIcon></th>
+                    <th pSortableColumn="vuela" style="width:20%">Vuela <p-sortIcon field="vuela"></p-sortIcon></th>
+                    <th pSortableColumn="color" style="width:20%">Color <p-sortIcon field="color"></p-sortIcon></th>
+                </tr>
+            </ng-template>
+            <!-- let-heroe : Forma de declarar variables de scope según ES6. 
+                let- : Paralabra para declrar variable  
+                heroe : Nombre de la variable que representa cada iteración de  [value]="heroes"
+            -->
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+
+                    <td>{{ heroe.nombre }}</td>
+                    <!-- Encadeno pipes, en este caso, primero "vuelva" y una vez terminado el pipe "titlecase" -->
+                    <td>{{ heroe.vuela | vuela | titlecase}}</td>
+                    <td>{{ heroe.color }}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
